--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/jszip": "^3.4.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "mongodb": "^6.5.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
